<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="lost_items">Lost Items</string>
    <string name="found_items">Found Items</string>
    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search items...</string>
    <string name="my_posted_items">My Posted Items</string>
</resources>
